--- a/web-basic/8/hw/css/style.css
+++ b/web-basic/8/hw/css/style.css
@@ -329,6 +329,22 @@ section {
 figure {
     margin: 0;
 }
+
+.product-item:hover .action-links .icon:first-child {
+    -webkit-animation: fadeInUp 200ms;
+            animation: fadeInUp 200ms;
+  }
+  
+  .product-item:hover .action-links .icon:nth-child(2) {
+    -webkit-animation: fadeInUp 400ms;
+            animation: fadeInUp 400ms;
+  }
+  
+  .product-item:hover .action-links .icon:last-child {
+    -webkit-animation: fadeInUp 600ms;
+            animation: fadeInUp 600ms;
+  }
+
 .product-item .product-thumb {
     position: relative;
     display: block;
@@ -340,7 +356,8 @@ figure {
   bottom: 60px;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+    transform: translateX(-50%);
+    
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
   width: 100%;
@@ -350,9 +367,33 @@ figure {
     
 }
 
+@-webkit-keyframes fadeInUp {
+    from {
+      -webkit-transform: translateY(30px);
+              transform: translateY(30px);
+    }
+    to {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+  }
+  
+  @keyframes fadeInUp {
+    from {
+      -webkit-transform: translateY(30px);
+              transform: translateY(30px);
+    }
+    to {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+  }
+
+
 .product-item:hover .action-links {
     opacity: 1;
     visibility: visible;
+    
 }
 .action-links .icon:hover{
     background-color: #ff5353;
@@ -366,23 +407,10 @@ figure {
     height: 50px;
     width: 50px;
     
+    
 }
 
-.product-item:hover .product-thumb .action-links .icon:first-child {
-    -webkit-animation: fadeInUp 200ms;
-            animation: fadeInUp 200ms;
-  }
-  
-  .product-item:hover .product-thumb .action-links .icon:nth-child(2) {
-    -webkit-animation: fadeInUp 400ms;
-            animation: fadeInUp 400ms;
-  }
-  
-  .product-item:hover  .product-thumb .action-links .icon:last-child {
-    -webkit-animation: fadeInUp 600ms;
-            animation: fadeInUp 600ms;
-  }
-  
+
 
 .product-item .product-content {
     text-align: center;
@@ -493,11 +521,34 @@ figure {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-transition: all 300ms ease;
     transition: all 300ms ease;
-    opacity: 1;
+    opacity: 0;
     visibility: hidden;
 }
+.instagram a:before{
+    content: '';
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 83, 83, 0.7);
+    height: 100%;
+    width: 100%;
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.instagram a:hover::before {
+    top: 0;
+    opacity: 1;
+    visibility: visible;
+  }
 
 .instagram a:hover i {
     opacity: 1;
