--- a/web-Adv/3/hw/css/style.css
+++ b/web-Adv/3/hw/css/style.css
@@ -17,6 +17,7 @@ body {
 
 /* Header */
 .banner {
+    height: 1000px;
     background-image: linear-gradient(
             0deg,
             rgba(252, 227, 138, 0.5) 0%,
