--- a/web-Adv/5/onlab/css/style.css
+++ b/web-Adv/5/onlab/css/style.css
@@ -1,168 +1,25 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: "Nunito Sans", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
-    color: #000000;
-}
-
-ul {
-    list-style: none;
-}
-
-.container {
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-
-
-
-.date-wrapper {
-    margin-top: 30px;
-    
-}
-
-.day {
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 1;
-}
-
-
-.todo-number {
-    width: 20px;
-    height: 20px;
-    background-color: #000;
-    color: #fff;
-    border-radius: 50%;
-    line-height: 1.4;
-    margin-left: 10px;
-}
-
-.btn-cancel,
-.btn-add,
-.btn-clear,
-.btn-more {
-    background-color: transparent;
-    border: 0;
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #eee;
+    color: #444;
     cursor: pointer;
-    font-size: 16px;
-}
-
-.btn-cancel i,
-.btn-add i,
-.btn-clear i,
-.btn-more i {
-    font-size: 20px;
-    line-height: 1;
-}
-
-
-
-.todo-item {
-    margin-bottom: 10px;
-}
-
-.new-todo {
-    position: relative;
-    
-    margin-bottom: 10px;
-}
-.bd-b{
-    
-    border-bottom: 1px solid #ECECEC;
-}
-.todo-input {
+    padding: 18px;
     width: 100%;
-    height: 50px;
-    border:none!important ;
-    
-    border-radius: 0;
-    padding: 0 10px;
-    font-size: 16px;
-}
-
-.btn-cancel {
-    position: absolute;
-    top: 15px;
-    right: 30px;
-    color: #555555;
-}
-
-
-
-.new-todo {
-    display: none;
-    
-}
-.item{
-    width: 165px;
-    height: 45px;
-    min-height: 45px;
-    position: relative; 
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-.item i.co{
-    position: absolute;
-    font-size: 21px;
-    padding-left: 5px;
-    left: -27px;
-    top:10px;
-}
-.item p.text{
-    position: absolute;
-    padding:0;
-    margin:0;
-    
-    left: 10px;
-    top: 11px;
-    
-    
-}
-
-.item i.de{
-    position: absolute;
-    font-size: 21px;
-    right: -290px;
-    top:10px;
-}
-
-
-
-.add-to-do{
-    position: relative;
-    width: 360px;
-    height:40px;
-    background-color: #FFF;
-    padding: 10px;
-    border-top: 1px solid rgba(0,0,0,0.1);
-}
-.add-to-do i{
-    position: absolute;
-    font-size: 40px;
-    color: #4162f6;
-}
-
-.add-to-do input{
-    position: absolute;
-    left: 50px;
-    height: 35px;
-    width: 310px;
-    background-color: transparent;
+    text-align: left;
     border: none;
-    font-size: 20px;
-    padding-left:10px;
-}
+    outline: none;
+    transition: 0.4s;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+  }
