--- a/project/css/style.css
+++ b/project/css/style.css
@@ -80,12 +80,14 @@ ul {
   display: block;
 }
 .menu-link.active {
-  background: rgba(255, 255, 255, 0.2);
+  color: #000000;
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 /* --------------------------- */
 .header .navbar a:hover {
   color: rgb(0, 0, 0);
-  background: rgba(255, 255, 255, 0.2);
+  background: none;
+  
 }
 
 .header .navbar ul li ul {
