--- a/project-fe/css/store-product.css
+++ b/project-fe/css/store-product.css
@@ -1,80 +1,49 @@
-
-/* ------------------------------------------------------------------------------------------------------- */
 .Breadcrumb-1 {
-  padding: 0 9%;
-}
+    padding: 0 9%;
+  }
+  
+  .breadcrumb-item {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+  }
 
-.breadcrumb-item {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
-}
 
+
+  
 /* -----------------------------------------------------banner-------------------------------------------- */
 .container {
-  padding-left: initial;
-  padding-right: initial;
-}
-.swiper-slide img {
-  max-height: 300px;
-  height: 100%;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  background-color: rgba(204, 204, 204, 0.5);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.3);
-}
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  font-size: 20px;
-  color: #4a4a4a;
-}
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
-  background-color: #fff;
-}
-
-/* -------------------------------------product----------------------------------------------------------- */
-.product .card-img-overlay {
-  top: 50%;
-  left: 65%;
-}
-.product h5 {
-  font-size: 18px;
-}
-.product .btn {
-  border: var(--border);
-  font-size: 14px;
-}
-.product .btn-primary {
-  color: #3f3f3f;
-  background: #fff;
-}
-
-/* ------------------------------------------------featued-phone------------------------------------------------------------- */
-
-.featued-header .btn {
-  margin-top: initial;
-  border: var(--border);
-}
-
-.featued-header .btn-primary {
-  color: #0168fa;
-  background: white;
-}
-
-.Featured-phone .swiper-pagination {
-  bottom: -3px;
-}
-.Featured-phone .swiper-pagination-bullet {
-  background: #585858 !important;
-}
-.Featured-phone .card ,.Featured-laptop .card,
+    padding-left: initial;
+    padding-right: initial;
+  }
+  .swiper-slide img {
+    max-height: 300px;
+    height: 100%;
+  }
+  
+  .swiper-button-next,
+  .swiper-button-prev {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: rgba(204, 204, 204, 0.5);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 20px;
+    color: #4a4a4a;
+  }
+  .swiper-button-next:hover,
+  .swiper-button-prev:hover {
+    background-color: #fff;
+  }
+  /* ------------------------------------------product----------------------------------------------------------------- */
+  .product-header{
+    background-color: #fff;
+  }
+  .Featured-phone .card ,.Featured-laptop .card,
  .Featured-tv .card .Featured-phukien .card{
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
@@ -206,42 +175,3 @@ line-height: 20px;
 .icon-5:hover .carddh , .icon-6:hover .kg {
   display: block;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* -----------------------------------------------------------responsive---------------------------------------------- */
-
-
