--- a/project-fe/css/header.css
+++ b/project-fe/css/header.css
@@ -16,11 +16,12 @@
 }
 html {
   font-size: 62.5%;
+  
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: #f7f7f7;
+  background-color: #fff;
 }
 section {
   padding: 2rem 9%;
