--- a/project-fe/css/style.css
+++ b/project-fe/css/style.css
@@ -20,6 +20,7 @@ html{
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #fff;
 }
 section{
   padding: 2rem 9%;
@@ -78,6 +79,22 @@ ul {
 
 img{
   width:100%;
+}
+.btn-top{
+  margin-top: 10px;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  padding: 8px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  display: block;
+  
+}
+.btn-top .hide{
+  display: block;
 }
 
 /* -----------------------------------------------------------header---------------------------------------------- */
