--- a/project-fe/css/chitietsp.css
+++ b/project-fe/css/chitietsp.css
@@ -8,7 +8,309 @@
     line-height: 24px;
   }
 
+.mr-1{
+margin-right: 1rem;
+}
+.mr-2{
+  margin-right: 2rem;
+  }
+  .mr-3{
+    margin-right: 3rem;
+    }
+.ml-1{
+  margin-left: 1rem;
+  }
+.pl-1{
+  padding-left: 1rem;
+}
+.pl-2{
+  padding-left: 2rem;
+}
+.pr-2{
+  padding-right: 2rem;
+}
+.pr-3{
+  padding-right: 3rem;
+}
+.pr-1{
+  padding-right: 1rem;
+}
 
+/* -----------------------------------------------------clearfix-------------------------------------------- */
+
+.product-reviews{
+  font-size: 1.4rem;
+}
+.product-reviews .product-reviews-star .product-reviews-star-icon .fas{
+  color: #EA9D02;
+}
+.product-reviews .product-reviews-number{
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+}
+.product-details-special-price{
+  margin-bottom: initial;
+  color: #ff5353;
+  
+}
+.product-details-old-price{
+  margin-bottom: initial;
+  color: #707070;
+    text-decoration: line-through;
+}
+.product-details-reduce{
+  font-size: 1.2rem;
+  color: #FFF;
+  background-color: #ff5353;
+  border-radius: 4px;
+    padding: 2px 4px;
+    font-weight: 500;
+    line-height: 1;
+    
+}
+.product-details-color-title{
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 400;
+}
+.product-details-color .btn{
+  margin-top: initial;
+}
+.btn:hover{
+  background-color: initial;
+  color: #000;
+}
+
+.clearfix .product-details-color .btn-color{
+  padding: 1rem 1rem;
+  border: 1px solid #ddd;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 400;
+  border-radius: 0.4rem!important;
+}
+
+/* .color-1{
+  background-color: #57ABF0;
+  color: #FFF;
+}
+.color-2{
+  background-color: #80848E;
+  color: #FFF;
+} */
+.btn-check:active+.color-1 ,.btn-check:checked+.color-1 {
+  background-color: #57ABF0;
+  color: #FFF;
+}
+.btn-check:active+.color-2 ,.btn-check:checked+.color-2{
+  background-color: #80848E;
+  color: #FFF;
+}
+
+.buttons_added {
+  opacity:1;
+  display:inline-block;
+  display:inline-flex;
+  white-space:nowrap;
+  vertical-align:top;
+}
+.is-form {
+  overflow:hidden;
+  position:relative;
+  background-color:#f9f9f9;
+  height:4.2rem;
+  width:4.9rem;
+  padding:0;
+  text-shadow:1px 1px 1px #fff;
+  border:1px solid #ddd;
+  font-size: 1.4rem;
+}
+.is-form:focus,.input-text:focus {
+  outline:none;
+}
+.is-form.minus {
+  border-radius:4px 0 0 4px;
+}
+.is-form.plus {
+  border-radius:0 4px 4px 0;
+}
+.input-qty {
+  background-color:#fff;
+  height:4.2rem;
+  width: 4.9rem;
+  text-align:center;
+  font-size:1.4rem;
+  display:inline-block;
+  vertical-align:top;
+  margin:0;
+  border-top:1px solid #ddd;
+  border-bottom:1px solid #ddd;
+  border-left:0;
+  border-right:0;
+  padding:0;
+}
+.input-qty::-webkit-outer-spin-button,.input-qty::-webkit-inner-spin-button {
+  -webkit-appearance:none;
+  margin:0;
+}
+.product-details-product-number{
+  font-size: 1.4rem;
+}
+.product-details-promotion{
+background-color: #f8f9fa;
+border: 1px solid #ddd;
+  border-radius: 0.4rem ;
+}
+
+
+.product-details-promotion-title{
+  font-size: 1.4rem;
+  font-weight: 500;
+  border-bottom:  1px solid #ddd;
+  padding: 1rem;
+  border-radius: 0.4rem 0.4rem 0  0;
+  
+}
+
+.fa-check-circle{
+  color: #48bb78;
+  font-size: 1.4rem;
+}
+.product-details-promotion-content-text{
+  font-size: 1.3rem;
+}
+.product-details-promotion-content a{
+  color: #2363bd;
+  font-size: 1.3rem;
+}
+.product-details-button-btn{
+  font-size: 1.4rem;
+  font-weight: 400;
+  padding: 1rem 2rem;
+  border: initial;
+  border-radius: 0.4rem;
+}
+.btn-1{
+  background-color: #d9d9d9;
+  color: #000000;
+}
+.btn-1:hover{
+  background-color: rgba(217, 217, 217, 0.7);
+}
+.btn-2{
+  background-color:#ff5353;
+  color: #fff;
+}
+.btn-2:hover{
+  background-color: rgba(255, 83, 83, 0.8);
+}
+
+
+/* ------------------------------------------------------------------ */
+.product-img{
+        position: relative;
+        height: 100%;
+        background: rgb(255, 255, 255);
+       max-height: 39rem;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      }
+
+
+      .swiper {
+        width: 100%;
+        height: 100%;
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        /* Center slide text vertically */
+        
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
   
-/* -----------------------------------------------------banner-------------------------------------------- */
+
+      .swiper {
+        width: 100%;
+        height: 300px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .swiper-slide {
+        background-size: cover;
+        background-position: center;
+      }
+
+      .mySwiper2 {
+        height: 80%;
+        width: 100%;
+      }
+
+      .mySwiper {
+        height: 20%;
+        box-sizing: border-box;
+        padding: 10px 0;
+      }
+
+      .mySwiper .swiper-slide {
+        width: 25%;
+        height: 100%;
+        opacity: 0.4;
+      }
+
+      .mySwiper .swiper-slide-thumb-active {
+        opacity: 1;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+
+/* ----------------------------------------------------------------- */
+.product-details-parameter{
+  background-color: #f8f9fa;
+  border: 1px solid #ddd;
+    border-radius: 0.4rem ;
+    
+}
+.product-details-parameter-title{
+  font-size: 1.4rem;
+  font-weight: 500;
+  border-bottom:  1px solid #ddd;
+  padding: 1rem;
+  border-radius: 0.4rem 0.4rem 0  0;
+
+}
+.table{
+  margin-bottom: initial;
+}
+.product-details-parameter-content{
+  font-size: 1.4rem;
+  
+}
