--- a/project-fe/css/chitietsp.css
+++ b/project-fe/css/chitietsp.css
@@ -4,8 +4,8 @@
   
   .breadcrumb-item {
     font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
   }
 
 .mr-1{
@@ -17,6 +17,12 @@ margin-right: 1rem;
   .mr-3{
     margin-right: 3rem;
     }
+.ml-3{
+      margin-left: 3rem;
+      }
+.mr-7{
+      margin-right: 7rem;
+      }
 .ml-1{
   margin-left: 1rem;
   }
@@ -25,6 +31,9 @@ margin-right: 1rem;
 }
 .pl-2{
   padding-left: 2rem;
+}
+.pl-3{
+  padding-left: 3rem;
 }
 .pr-2{
   padding-right: 2rem;
@@ -35,18 +44,33 @@ margin-right: 1rem;
 .pr-1{
   padding-right: 1rem;
 }
+.pr-0{
+  padding-right: 0.5rem;
+}
 
 /* -----------------------------------------------------clearfix-------------------------------------------- */
-
+.container{
+  padding: initial;
+}
 .product-reviews{
   font-size: 1.4rem;
 }
-.product-reviews .product-reviews-star .product-reviews-star-icon .fas{
+.product-reviews-star-number{
+  
+  font-weight: 500;
+}
+.product-reviews-star-icon .fas{
   color: #EA9D02;
+}
+.product-reviews-star-icon .fa{
+  color: #99a2aa;
 }
 .product-reviews .product-reviews-number{
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
+}
+.product-details{
+  padding-left: 3rem;
 }
 .product-details-special-price{
   margin-bottom: initial;
@@ -69,7 +93,7 @@ margin-right: 1rem;
     
 }
 .product-details-color-title{
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   line-height: 2.4rem;
   font-weight: 400;
 }
@@ -165,7 +189,7 @@ border: 1px solid #ddd;
 
 .product-details-promotion-title{
   font-size: 1.4rem;
-  font-weight: 500;
+  font-weight: bold;
   border-bottom:  1px solid #ddd;
   padding: 1rem;
   border-radius: 0.4rem 0.4rem 0  0;
@@ -292,16 +316,17 @@ border: 1px solid #ddd;
       }
 
 
-/* ----------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------- */
 .product-details-parameter{
   background-color: #f8f9fa;
   border: 1px solid #ddd;
     border-radius: 0.4rem ;
+    margin-left: 3rem;
     
 }
 .product-details-parameter-title{
   font-size: 1.4rem;
-  font-weight: 500;
+  font-weight: bold;
   border-bottom:  1px solid #ddd;
   padding: 1rem;
   border-radius: 0.4rem 0.4rem 0  0;
@@ -310,7 +335,280 @@ border: 1px solid #ddd;
 .table{
   margin-bottom: initial;
 }
-.product-details-parameter-content{
+ .product-details-parameter-content{
   font-size: 1.4rem;
+  
+}
+.table>:not(caption)>*>* {
+  padding-left: 1rem;
+  border-bottom: initial;
+}
+/* ------------------------------------------------------------------------------------------ */
+.product-characteristics, .product-comment{
+  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+  border-radius: 0.4rem ;
+}
+
+.product-details-highlights{
+  background-color: #F2F2F2;
+    border-radius: 0.4rem ;
+    margin: 3rem;
+ 
+}
+.product-details-highlights-title{
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1rem;
+  text-align: center;
+  color: #ff5353;
+}
+.product-details-highlights-content {
+  font-size: 1.4rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.product-details-highlights-content-text ul{
+list-style: disc;
+}
+.product-characteristics-content{
+  margin: 3rem 3rem 0 3rem;
+}
+.product-characteristics-content h1 ,.product-comment-heading{
+  font-size: 2rem;
+  font-weight: bold;
+  
+}
+.product-characteristics-content h2{
+  font-size: 1.6rem;
+  font-weight: bold;
+  
+}
+.product-characteristics-content p{
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+}
+.product-characteristics-content img{
+  max-height: 50rem;
+}
+
+/* --------------------------------------------------------------------comment--------------------------------------------- */
+.product-details-comment-star h1{
+font-size: 3rem;
+}
+.product-details-comment-star, .star-1{
+font-size: 1.5rem;
+}
+.product-details-comment-text{
+  font-size: 1.4rem;
+}
+.text-star{
+  font-size: 1.4rem;
+}
+.comment-text{
+  font-size: 1.2rem;
+  padding-left: 0.5rem;
+}
+.progress ,.progress-bar{
+  border-radius: 2rem;
+}
+
+.btn-comment{
+  padding: 1.2rem 1.8rem;
+  font-size: 1.4rem;
+  border-radius: 0.4rem;
+  color: #fff;
+  background: #ff5353;
+  border: initial;
+  margin: 0 4rem ;
+}
+
+
+.btn-avata{
+  flex-basis: 7rem;
+  
+  height: 7rem;
+  margin-right: 1.5rem;
+  border: initial;
+  background-color: #ced4da;
+  color: #FFF;
+  font-size: 1.8rem;
+  border-radius: 0.4rem;
+}
+
+.comment-content-heading{
+  font-size: 1.8rem;
+}
+.star-2{
+  font-size: 1.4rem;  
+}
+.comment-time{
+  font-size: 1.4rem;
+  
+}
+
+.comment-text{
+  font-size: 1.6rem;
+  padding: 0;
+}
+.comment-like{
+  font-size: 1.4rem;
+  color: #0168fa;
+}
+.comment-like:hover{
+  color: #000;
+}
+
+
+/* -----------------------------------form nhận xét ---------------------------------------------------*/
+.form-control{
+  border: 1px solid #ddd;
+  font-size: 1.4rem;
+  padding: 1rem 1.2rem;
+  border-radius:0.4rem ;
+}
+.form-control:focus{
+  
+  border-color: initial;
+  box-shadow: none;
+}
+.form-control:focus-visible{
+  outline: none;
+  border: 1px solid #ddd;
+  
+}
+
+
+.invalid-feedback{
+  font-size: 1.2rem;
+}
+
+.form-control-1{
+  display: block;
+    width: 100%;
+    padding: 1rem 1.2rem;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ddd;
+    
+    border-radius: 0.4rem;
+    
+}
+.form-control-1:focus-visible{
+  border: initial;
+  outline: none;
+  border: 1px solid #ddd;
+}
+
+.form-review-modal{
+  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+    border-radius: 0.4rem;
+}
+.form-review-modal-heading{
+  background-color: #ff5353 ;
+  color: #FFF;
+  border-radius: 0.4rem 0.4rem 0 0;
+}
+.form-review-modal-heading, .text-1{
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.star-rating{
+  margin-right: 6rem;
+  
+}
+.star-rating .product-reviews-star-icon{
+  
+  font-size: 1.6rem;
+}
+.star-rating span{
+  
+  font-size: 1.2rem;
+}
+
+.btn-submit{
+width: 100%;
+padding: 1rem 1.2rem;
+border-radius: 0.4rem;
+font-size: 1.8rem;
+font-weight: 500;
+border: initial;
+color: #FFF;
+background-color: #ff5353 ;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* -----------------------------------------------------------responsive---------------------------------------------- */
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+  .Breadcrumb-1 {
+    padding: 2rem 9% 0 9%;
+  }
+  
+  
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+  .Breadcrumb-1 {
+    padding: 4rem 9% 0 9%;
+  }
+  .product-details{
+    padding-left: 0;
+  }
+  .product-details-parameter{
+    margin-left: 0;
+  }
+  
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 45%;
+  }
+  
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 45%;
+  }
+  .Breadcrumb-1 {
+    padding: 5rem 9% 0 9%;
+  }
   
 }
