--- a/project-fe/css/header.css
+++ b/project-fe/css/header.css
@@ -38,10 +38,10 @@ ul {
 }
 
 .btn {
-  margin-top: 10px;
+  margin-top: 1rem;
   display: inline-block;
-  padding: 8px 30px;
-  font-size: 16px;
+  padding: 0.8rem 30px;
+  font-size: 1.6rem;
   border-radius: 4px;
   border: 2px solid rgb(0, 0, 0);
   cursor: pointer;
@@ -52,7 +52,7 @@ ul {
 }
 
 .btn-default {
-  margin-top: 30px;
+  margin-top: 3rem;
   background-color: #ff5353;
   border-radius: 4px;
   color: #fff;
@@ -61,12 +61,12 @@ ul {
 
   color: #fff;
   display: inline-block;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 500;
   line-height: 0.8;
   text-align: center;
 
-  padding: 22px 25px;
+  padding: 2.2rem 2.5rem;
   text-decoration: none;
 }
 .btn-default:hover {
@@ -90,7 +90,7 @@ img {
   left: 0;
   right: 0;
   z-index: 1000;
-  padding: 10px 9%;
+  padding: 1rem 9%;
   background: #cb1c22;
   box-shadow: var(--box-shadow);
 }
