--- a/project-fe/css/chitietsp.css
+++ b/project-fe/css/chitietsp.css
@@ -1,4 +1,9 @@
-.Breadcrumb-1 {
+* {
+  
+  transition: all .2 linear;
+}
+
+.breadcrumb-1 {
     padding: 0 9%;
   }
   
@@ -503,9 +508,26 @@ font-size: 1.5rem;
   border: 1px solid #ddd;
 }
 
+.form-review{
+  position: fixed;
+  top: 100% ;
+  left: 0;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0,0,0,.7);
+  z-index: 1001; 
+}
+
+.form-review.active{
+  top: 0;
+}
 .form-review-modal{
-  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
-    border-radius: 0.4rem;
+  position: relative;
+  background-color: #FFF;
+  border-radius: 0.4rem;
 }
 .form-review-modal-heading{
   background-color: #ff5353 ;
@@ -517,7 +539,7 @@ font-size: 1.5rem;
   font-weight: 500;
 }
 .star-rating{
-  margin-right: 6rem;
+  margin-right: 5.5rem;
   
 }
 .star-rating .product-reviews-star-icon{
@@ -585,7 +607,7 @@ background-color: #ff5353 ;
     font-size: 55%;
   }
   .Breadcrumb-1 {
-    padding: 4rem 9% 0 9%;
+    padding: 3rem 9% 0 9%;
   }
   .product-details{
     padding-left: 0;
@@ -608,7 +630,7 @@ background-color: #ff5353 ;
     font-size: 45%;
   }
   .Breadcrumb-1 {
-    padding: 5rem 9% 0 9%;
+    padding: 4rem 9% 0 9%;
   }
   
 }
