--- a/project-fe/css/header.css
+++ b/project-fe/css/header.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap");
 :root {
   --white: #fff;
-  --bs-gutter-x: 1.6rem !important;
+  
   --grey: #aaa;
   --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   --border-top: 1px solid rgba(0, 0, 0, 0.1);
@@ -13,6 +13,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all .2 linear;
 }
 html {
   font-size: 62.5%;
@@ -105,8 +106,8 @@ img {
 }
 .header .logo {
   font-weight: bold;
-  font-size: 26px;
-  line-height: 30px;
+  font-size: 2.6rem;
+  line-height: 3rem;
   color: var(--white);
 }
 .header .navbar {
@@ -122,8 +123,8 @@ img {
   float: left;
 }
 .header .navbar ul li a {
-  font-size: 14px;
-  padding: 20px;
+  font-size: 1.4rem;
+  padding: 2rem;
   color: #ffffff;
   display: block;
 }
@@ -145,8 +146,8 @@ img {
   display: none;
 }
 .header .navbar ul li ul a {
-  font-size: 14px;
-  padding: 20px;
+  font-size: 1.4rem;
+  padding: 2rem;
   color: #000000 !important;
   display: block;
 }
@@ -171,7 +172,7 @@ img {
 }
 
 .header .icons div {
-  font-size: 16px;
+  font-size: 1.6rem;
   color: var(--white);
   margin-left: 10px;
   cursor: pointer;
@@ -206,7 +207,7 @@ img {
   border-radius: initial;
   border: hidden;
   text-transform: none;
-  font-size: 14px;
+  font-size: 1.4rem;
   color: black;
   padding: 0 1rem;
 }
@@ -215,8 +216,8 @@ img {
   outline: none;
 }
 .header .search-form label {
-  font-size: 20px;
-  padding-right: 15px;
+  font-size: 2rem;
+  padding-right: 1.5rem;
   color: black;
   cursor: pointer;
 }
@@ -229,31 +230,31 @@ img {
   top: 110%;
   right: -110%;
   width: 35rem;
-  padding: 10px;
+  padding: 1rem;
   background: #fff;
   border-radius: 0.4rem;
   box-shadow: var(--box-shadow);
 }
 .header .shopping-cart.active {
   right: 2rem;
-  transition: 0.5s linear;
+  transition:all 0.5s ease;
 }
 .header .shopping-cart .box {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 1rem;
   position: relative;
-  margin: 10px 0;
+  margin: 1rem 0;
 }
 .header .shopping-cart .box img {
-  height: 100px;
+  height: 10rem;
   width: auto;
 }
 .header .shopping-cart .box .bi-trash-fill {
-  font-size: 20px;
+  font-size: 2rem;
   position: absolute;
   top: 40%;
-  right: 20px;
+  right: 2rem;
   cursor: pointer;
   transform: translate(-50%);
 }
@@ -261,27 +262,27 @@ img {
   color: var(--grey);
 }
 .header .shopping-cart .box .content h3 {
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: bold;
-  padding-bottom: 10px;
+  padding-bottom: 10rem;
 }
 .header .shopping-cart .box .content span {
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 .header .shopping-cart .box .content .quantity {
-  padding-left: 10px;
+  padding-left: 1rem;
 }
 .header .shopping-cart .total {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: bold;
-  padding: 10px 0;
+  padding: 1rem 0;
   text-align: center;
   color: #cb1c22;
 }
 .header .shopping-cart .btn {
   display: block;
   text-align: center;
-  margin: 10px;
+  margin: 1rem;
 }
 
 
@@ -298,30 +299,17 @@ img {
       font-size: 55%;
     }
     .header {
-      padding: 12px;
+      padding: 1.2rem;
     }
-    .header .icons .fas {
-      height: 24px;
-      width: 24px;
-      color: var(--white);
-      margin-left: 5px;
-      cursor: pointer;
-      font-size: 100%;
-    }
-    .header .navbar ul li a {
-      font-size: 12px;
-      padding: 20px;
-      color: #ffffff;
-      display: block;
-    }
+    
     .banner-content h1 {
-      font-size: 40px;
+      font-size: 4rem;
       font-weight: 500;
-      line-height: 44px;
+      line-height: 4.4rem;
     }
     .banner-content span {
-      font-size: 20px;
-      line-height: 26px;
+      font-size: 2rem;
+      line-height: 2.6rem;
     }
   }
   
@@ -340,9 +328,10 @@ img {
       border-top: var(--border-top);
       background: rgb(255, 255, 255);
       clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+      transition: 0.7 linear;
     }
     .header .navbar a {
-      margin: 10px 25px;
+      margin: 1rem 2.5rem;
       display: block;
       color: #000000 !important;
     }
@@ -357,7 +346,7 @@ img {
       width: 100%;
     }
     .header .navbar ul li a {
-      padding: 10px;
+      padding: 1rem;
     }
     .header .navbar ul li ul li {
       background: #eee;
@@ -388,6 +377,6 @@ img {
       align-items: center;
     }
     .header .navbar ul li a {
-      padding: 5px;
+      padding: 0.5rem;
     }
   }
