--- a/project-fe/css/cart.css
+++ b/project-fe/css/cart.css
@@ -47,7 +47,7 @@
 
 /* ----------------------------------------------------------------------------------------------- */
 
-.cart-header, .cart-content {
+.cart-header, .cart-content,.cart-buy {
   font-size: 1.4rem;
   line-height: 2.2rem;
   border: 1px solid #ddd;
@@ -59,6 +59,10 @@
 }
 .cart-content-product a img{
   max-width: 10rem;
+}
+
+.form-check{
+  margin-bottom: initial;
 }
 
 .img-cart{
@@ -77,8 +81,8 @@
   overflow:hidden;
   position:relative;
   background-color:#f9f9f9;
-  height:4.2rem;
-  width:4.9rem;
+  height:4rem;
+  width:4.5rem;
   padding:0;
   text-shadow:1px 1px 1px #fff;
   border:1px solid #ddd;
@@ -95,8 +99,8 @@
 }
 .input-qty {
   background-color:#fff;
-  height:4.2rem;
-  width: 4.9rem;
+  height:4rem;
+  width: 4.5rem;
   text-align:center;
   font-size:1.4rem;
   display:inline-block;
@@ -113,13 +117,47 @@
   margin:0;
 }
 
+.cart-buy{
+  padding: 3rem;
+}
+.cart-product-text{
+  font-size: 1.6rem;
+  
+}
+.cart-operation{
+  cursor: pointer;
+}
+.cart-operation,.total-number{
+  color: #ff5353;
+}
+
+.total-title{
+  font-size: 1.6rem;
+
+}
 
 
+.btn-buy{
+  font-size: 1.6rem;
+  margin-left: 3rem;
+  padding: 1.2rem 3rem;
+  border: none;
+  border-radius: .4rem;
+  color: #fff;
+  background-color: #ff5353;
+
+}
+.btn-buy:hover{
+  background-color: rgba(255, 83, 83, 0.7);
+  color: #fff;
+}
 
 
-
-
-
+.form-check-input{
+  border-radius: .4rem;
+  width: 2rem;
+  height: 2rem;
+}
 
 
 
@@ -142,8 +180,8 @@
   html {
     font-size: 55%;
   }
-  .Breadcrumb-1 {
-    padding: 4rem 9% 0 9%;
+  .breadcrumb-1 {
+    padding: 1rem 9% 0 9%;
   }
 }
 
@@ -151,8 +189,8 @@
   html {
     font-size: 50%;
   }
-  .Breadcrumb-1 {
-    padding: 4rem 9% 0 9%;
+  .breadcrumb-1 {
+    padding: 3rem 9% 0 9%;
   }
 }
 
@@ -160,16 +198,43 @@
   html {
     font-size: 50%;
   }
-  .Breadcrumb-1 {
-    padding: 5rem 9% 0 9%;
+  .breadcrumb-1 {
+    padding: 3rem 9% 0 9%;
+  }
+  
+  .cart-buy .cart-product{
+    display: none;
+  }
+  .cart-operation-title-1 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  html {
+    font-size: 45%;
+  }
+  .breadcrumb-1 {
+    padding: 3rem 9% 0 9%;
+  }
+  
+  .cart-header{
+    display: none;
   }
 }
 
 @media (max-width: 450px) {
   html {
-    font-size: 45%;
+    font-size: 40%;
   }
-  .Breadcrumb-1 {
+  .breadcrumb-1 {
     padding: 4rem 9% 0 9%;
+  }
+  .cart-buy{
+    padding: 1rem;
+  }
+  .btn-buy{
+    margin-left: 0rem;
   }
 }
